# moral_reasoning_quality_evaluation

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  pyproject.toml
config/: ethics_bowls.yaml  models.yaml
data/analysis/lite_2026-01-20_00-49_claude4.5-gpt5.2-gemini3-grok4/: ANALYSIS_REPORT.md  Ethics_Bowl_Stage_A_Report.docx  Ethics_Bowl_Stage_A_Report.md  extracted_patterns.json  pattern_summary.json  quantitative_analysis.json  quantitative_analysis.md  review_samples.json  review_samples.md
data/dilemmas/: dilemmas.json  dilemmas_v2.json  dilemmas_v2.md
docs/: Out-of-Distribution Moral Reasoning Assessments.md
docs/Research Reports/: Evaluating Moral Reasoning in Agents.md
docs/proposal/: ethics_bowls_orchestration.md  ethics_bowls_proposal.md  ethics_bowls_specification.md
scripts/: run_analysis.py  run_ethics_bowls.py  test_api_connections.py  verify_setup.py
src/config/: loader.py
src/data/: schemas.py  storage.py
src/ethics_bowls/: __init__.py  analysis.py  dilemma_loader.py  judgment_parser.py  pattern_aggregator.py  pattern_extractor.py  prompt_builder.py  review_sampler.py  round_runner.py  schemas.py  storage.py  tournament_runner.py
src/models/: __init__.py  anthropic_model.py  base.py  google_model.py  grok_model.py  local_model.py  openai_model.py  qwen_model.py
tests/: conftest.py  test_api_providers.py  test_config_loader.py  test_dilemmas_loader.py  test_integration_mock_run.py  test_metrics.py  test_models_provider_resolution.py  test_schemas.py  test_storage.py
(+19 files in other folders)
